--- a/templates/web/zurich/admin/report_edit.html
+++ b/templates/web/zurich/admin/report_edit.html
@@ -33,6 +33,7 @@
 [% ELSE %]
     <li><label for='title'>[% loc('Subject:') %]</label> <input size=60 type='text' id='title' name='title' value='[% problem.title | html %]'></li>
     <li><label for='detail'>[% loc('Details:') %]</label>
+    [% INCLUDE 'admin/response_templates_select.html' for='detail' %]
     <textarea name='detail' id='detail' cols=60 rows=5>[% problem.detail | html %]</textarea>
     [% IF problem.extra.original_detail %]
     [%
@@ -194,6 +195,7 @@ $(function(){
         <input type="checkbox" name="third_personal" id="third_personal" value="1"[% ' checked' IF problem.extra.third_personal %]>
         <label for="third_personal" class="inline">[% loc('Include reporter personal details') %]</label>
         [% END %]
+        [% INCLUDE 'admin/response_templates_select.html' for='external_message' %]
         <textarea name='external_message' id='external_body' cols=60 rows=5></textarea>
     </li>
     </ul>
@@ -206,6 +208,7 @@ $(function(){
     [% IF problem.state == s %]
         <ul class="no-bullets">
             <li><label for="status_update">[% loc('Public response:') %]</label>
+            [% INCLUDE 'admin/response_templates_select.html' for='status_update' %]
             <textarea name='status_update' id='status_update' cols=60 rows=5>
             [%- problem.extra.public_response || default_public_response | html -%]
             </textarea>
