--- a/web/cobrands/zurich/base.scss
+++ b/web/cobrands/zurich/base.scss
@@ -55,17 +55,13 @@
     background: $mobile_header_blue;
     border-top: 4px solid $mobile_menu_tab_bg_col;
     height: 48px;
-
-    .container {
-      position: relative;
-    }
 }
 #site-logo {
     background: url(logo_portal.jpg) 0px -24px no-repeat;
     width: 200px;
     height: 48px;
     left:0;
-    top:0;
+    top:4px;
 }
 // Colour tab to match colour scheme
 #nav-link {
@@ -186,5 +182,14 @@ h4.static-with-rule {
                 padding: 6px 0.5em;
             }
         }
+    }
+}
+
+@media print {
+    #site-header .container {
+        position: relative;
+    }
+    #site-logo {
+        top: 0;
     }
 }
